--- a/ebook-sharding-demo/pom.xml
+++ b/ebook-sharding-demo/pom.xml
@@ -44,6 +44,11 @@
             <version>3.0.0</version>
         </dependency>
         <dependency>
+            <groupId>c3p0</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.1.2</version>
+        </dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.21</version>
