--- a/ebook-sharding-demo/src/main/resources/application.properties
+++ b/ebook-sharding-demo/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 server.port=8081
-spring.datasource.url=jdbc:mysql://localhost:8066/ebook
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://47.106.130.196:3306/ebook?useUnicode=true&characterEncoding=utf8&mysqlEncoding=utf8&allowMultiQueries=true&zeroDateTimeBehavior=convertToNull
+#spring.datasource.username=root
+#spring.datasource.password=123456
+
+
+
