--- a/ebook-demo/src/main/resources/application.properties
+++ b/ebook-demo/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://47.106.130.196:8066/ebook
+spring.datasource.url=jdbc:mysql://localhost:8066/ebook
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
