ebook sharding demo

--- a/ebook-sharding-demo/src/main/resources/application.properties
+++ b/ebook-sharding-demo/src/main/resources/application.properties
@@ -1,9 +1,17 @@
 server.port=8081
+logging.level.com.redocon.shardingjdbc.mapper=debug
+sharding.jdbc.datasource.names=ebook
 
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/ebook?useUnicode=true&characterEncoding=utf8&mysqlEncoding=utf8&allowMultiQueries=true&zeroDateTimeBehavior=convertToNull
-#spring.datasource.username=root
-#spring.datasource.password=123456
+sharding.jdbc.datasource.ebook.type=com.mchange.v2.c3p0.ComboPooledDataSource
+sharding.jdbc.datasource.ebook.driverClass=com.mysql.jdbc.Driver
+sharding.jdbc.datasource.ebook.jdbcUrl=jdbc:mysql://localhost:3306/ebook_sharding
+sharding.jdbc.datasource.ebook.username=root
+sharding.jdbc.datasource.ebook.password=123456
+
+sharding.jdbc.config.sharding.tables.library_ebook.actual-data-nodes=ebook.library_ebook_$->{0..2}
+sharding.jdbc.config.sharding.tables.library_ebook.table-strategy.inline.sharding-column=id
+sharding.jdbc.config.sharding.tables.library_ebook.table-strategy.inline.algorithm-expression=library_ebook_$->{id % 3}
+sharding.jdbc.config.sharding.tables.library_ebook.key-generator-column-name=id
 
 
 
